infrastructure/prometheus/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-route
spec:
  parentRefs:
    - name: default
      namespace: default
      sectionName: https
  hostnames:
    - "grafana.home.arpa"
  rules:
    - backendRefs:
        - name: prometheus-grafana
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
